# alloy-evm

./: CLAUDE.md  Cargo.toml
crates/evm/src/: either.rs  evm.rs  precompiles.rs  traits.rs
crates/evm/src/block/: state_hook.rs
crates/evm/src/block/system_calls/: eip4788.rs  eip7251.rs
crates/evm/src/eth/: block.rs  mod.rs  spec.rs  staking.rs
