[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.21.3"
edition = "2021"
rust-version = "1.88"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy-evm"
repository = "https://github.com/alloy-rs/alloy-evm"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-evm = { version = "0.21.3", path = "crates/evm", default-features = false }
alloy-op-evm = { version = "0.21.3", path = "crates/op-evm", default-features = false }

# alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-chains = { version = "0.2.0", default-features = false }
alloy-eips = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0.27", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-hardforks = { version = "0.3" }
alloy-rpc-types-eth = { version = "1.0.27", default-features = false }

# op-alloy
alloy-op-hardforks = { version = "0.3" }
op-alloy-consensus = { version = "0.20", default-features = false }

# revm
revm = { version = "29.0.0", default-features = false }
op-revm = { version = "10.0.0", default-features = false }

# misc
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = "1"
test-case = "3"

[patch.crates-io]
# PerpState: revm + op-revm pinned at revm `perpdex-parallel` HEAD (the parallel
# place/cancel spike on top of perpdex — replay mode + classify_perp_tx + the
# set_perp_replay JournalTr seam this branch's Evm::set_perp_replay delegates to;
# all perp-parallel-gated, off by default). Kept in lockstep with 0g-reth's pin.
revm = { git = "https://github.com/0gfoundation/revm", rev = "68def0d058c54af31fc0dc23b5330e8d66cc0b9e" }
op-revm = { git = "https://github.com/0gfoundation/revm", rev = "68def0d058c54af31fc0dc23b5330e8d66cc0b9e", package = "op-revm" }